# ml_data_project

./: .gitignore  .sqlfluff  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 01_data_exploration.ipynb  02_sql_data_analysis.ipynb
sql/: example_query.sql
src/: __init__.py  data_utils.py  sql_utils.py
src/utilities/: config_utils.py  date_utils.py  file_utils.py  logging_utils.py
